--- a/css/login.css
+++ b/css/login.css
@@ -1,9 +1,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   background-image: url(../images/Fondologin.png);
-  background-size: 100% 145%;
-  
-  
+  background-size: 100% 170%;
 }
 
 .container {
@@ -34,7 +32,7 @@ section#formHolder {
   padding: 20px;
   background-size: cover;
   background-position: center center;
-  color: #fff;
+  color: rgb(0, 0, 0);
   min-height: 540px;
   position: relative;
   box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
@@ -47,17 +45,15 @@ section#formHolder {
   width: 100%;
 }
 .brand::before {
-  background:url(../images/logo1.png) no-repeat center;
+  background:url(../images/logo5.png) no-repeat center;
   content: "";
   display: block;
   background-size: 110%;
   width: 100%;
   height: 100%;
-  position: absolute;
+  position:absolute;
   top: 0;
   left: 0;
-  
-	
   z-index: -1;
 }
 
